# m23-llm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  compare_init.py  dataset.py  generate_stories.py  m23_init.py  m23_spectrum.py  model.py  pretrain_qwen_micro.py  pyproject.toml  qwen_micro.py  requirements.txt  train.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
